백그라운드 이미지 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
 </nav>
 
 <!-- 메인 컨텐츠 -->
-<div class="relative py-20 bg-cover bg-no-repeat bg-center" style="background-image: url('https://source.unsplash.com/random/1600x900/?shopping'); height: 500px;">
+<div class="relative py-20 bg-cover bg-no-repeat bg-center" style="background-image: url('https://picsum.photos/1600/900');">
     <!-- 오버레이 추가: 배경 이미지를 어둡게 만들어 텍스트 가독성을 높임 -->
     <div class="absolute inset-0 bg-black opacity-50"></div>
 
